--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Cleanup
         run: sed -i "s/%NAME%/test/g" build.sc
+      - name: Verilator Sim
+        uses: drom/action-verilator@v0.1.11
       - name: Setup Scala
         uses: olafurpg/setup-scala@v10
         with:
