--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Setup Mill
         uses: jodersky/setup-mill@v0.2.3
         with:
-          mill-version: 0.9.7
+          mill-version: 0.10.0
       - name: Cache Scala
         uses: coursier/cache-action@v5
       - name: mill Test
-        run: mill resolve _.test._
+        run: mill -i _.test.testOnly vitisrtlkernel.VitisRTLKernelTest
