--- a/xo_kernel/chisel_vecadd.cfg
+++ b/xo_kernel/chisel_vecadd.cfg
@@ -1,15 +1,17 @@
+platform=xilinx_u280_xdma_201920_3 # can be queried by 'plaforminfo -l'
+
 [connectivity]
 #nk=<kernel name>:<number>:<cu_name>.<cu_name>...
-nk=rtl_kernel_wizard_0:1:rtl_kernel_wizard_0_0
+nk=chisel_vecadd:1:chisel_vecadd_0
 # kernel_name、argument name 可以从 xo 文件中获取
 #sp=<compute_unit_name>.<argument>:<bank name>
-sp=rtl_kernel_wizard_0_0.m00_axi:HBM[0]
+sp=chisel_vecadd_0.m00_axi:HBM[0]
 # bank name 可通过 platforminfo 命令查询
 #slr=<compute_unit_name>:<slr_ID>
 
 [debug]
 protocol=all:all
-chipscope=rtl_kernel_wizard_0_0 # cu name
+chipscope=chisel_vecadd_0 # cu name
 # protocol=cu2:port3
 
 # Protocol analyzers on all CUs
