--- a/xo_kernel/chisel_vecadd.cfg
+++ b/xo_kernel/chisel_vecadd.cfg
@@ -14,6 +14,7 @@ protocol=all:all
 chipscope=chisel_vecadd_0 # cu name
 # protocol=cu2:port3
 
-# Protocol analyzers on all CUs
-# Protocol analyzer on port3 of cu2
-# ILA on cu2
+[profile]
+data=all:all:all
+memory=all
+stall=all:all
