--- a/xo_kernel/chisel_vecadd.cfg
+++ b/xo_kernel/chisel_vecadd.cfg
@@ -4,8 +4,10 @@ platform=xilinx_u280_xdma_201920_3 # can be queried by 'plaforminfo -l'
 #nk=<kernel name>:<number>:<cu_name>.<cu_name>...
 nk=chisel_vecadd:1:chisel_vecadd_0
 # kernel_name、argument name 可以从 xo 文件中获取
-#sp=<compute_unit_name>.<argument>:<bank name>
+# sp=<compute_unit_name>.<argument>:<bank name>
 sp=chisel_vecadd_0.m00_axi:HBM[0]
+# sp=chisel_vecadd_0.m00_axi:HBM[3:5]
+# sp 可以多个
 # bank name 可通过 platforminfo 命令查询
 #slr=<compute_unit_name>:<slr_ID>
 
